data(vax): update annotations for China

--- a/scripts/scripts/annotations_internal.yaml
+++ b/scripts/scripts/annotations_internal.yaml
@@ -1,5 +1,5 @@
 vaccinations:
-  - annotation_text: "Data for China added on Jun 10 and Aug 12"
+  - annotation_text: "Data for China added on Jun 10, Aug 12, Aug 26"
     location:
       - World
       - Asia
