--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -7,6 +7,7 @@ pipeline:
     countries:
     njobs: -2
     skip_countries:
+      - Andorra
       - Gabon
       - North Macedonia
       - Northern Cyprus
